@@ -14,7 +14,10 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 """Conversion of full repositories."""
-from bzrlib import ui, urlutils
+
+import os
+
+from bzrlib import osutils, ui, urlutils
 from bzrlib.bzrdir import BzrDir, Converter
 from bzrlib.errors import (BzrError, NotBranchError, NoSuchFile, 
                            NoRepositoryPresent, NoSuchRevision) 
@@ -23,6 +26,7 @@ from bzrlib.revision import ensure_null
 from bzrlib.transport import get_transport
 
 from bzrlib.plugins.svn import repos
+from bzrlib.plugins.svn.branch import SvnBranch
 from bzrlib.plugins.svn.core import SubversionException
 from bzrlib.plugins.svn.errors import ERR_STREAM_MALFORMED_DATA
 from bzrlib.plugins.svn.format import get_rich_root_format
@@ -82,7 +86,7 @@ def load_dumpfile(dumpfile, outputdir):
 
 def convert_repository(source_repos, output_url, scheme=None, layout=None,
                        create_shared_repo=True, working_trees=False, all=False,
-                       format=None, filter_branch=None):
+                       format=None, filter_branch=None, keep=False):
     """Convert a Subversion repository and its' branches to a 
     Bazaar repository.
 
@@ -131,7 +135,20 @@ def convert_repository(source_repos, output_url, scheme=None, layout=None,
 
     source_repos.lock_read()
     try:
-        existing_branches = source_repos.find_branches(layout=layout)
+        from_revnum = 0
+        to_revnum = source_repos.get_latest_revnum()
+        changed_branches = source_repos.find_fileprop_branches(layout=layout, 
+            from_revnum=from_revnum, to_revnum=to_revnum, check_removed=True)
+        existing_branches = []
+        removed_branches = []
+        for (bp, revnum, exists) in changed_branches:
+            if not exists and not keep:
+                removed_branches.append((bp, revnum))
+            elif exists:
+                try:
+                    existing_branches.append(SvnBranch(source_repos, bp))
+                except NotBranchError: # Skip non-directories
+                    pass
         if filter_branch is not None:
             existing_branches = filter(filter_branch, existing_branches)
 
@@ -144,6 +161,15 @@ def convert_repository(source_repos, output_url, scheme=None, layout=None,
                   getattr(inter, '_supports_branches', None) and 
                   inter._supports_branches):
                 inter.fetch(branches=existing_branches)
+
+        # Remove removed branches
+        for (bp, revnum) in removed_branches:
+            # TODO: Perhaps check if path is a valid branch with the right last
+            # revid?
+            fullpath = to_transport.local_abspath(bp)
+            if not os.path.isdir(fullpath):
+                continue
+            osutils.rmtree(fullpath)
 
         source_graph = source_repos.get_graph()
         pb = ui.ui_factory.nested_progress_bar()
