@@ -69,7 +69,10 @@ class RevidMap(object):
         raise NoSuchRevision(self, revid)
 
     def discover_revids(self, layout, from_revnum, to_revnum, project=None):
-        for (branch, revno) in self.repos.find_fileprop_branches(layout, from_revnum, to_revnum, project):
+        reuse_policy = self.get_config().get_reuse_revisions()
+        assert reuse_policy in ("other-branches", "removed-branches", "none") 
+        check_removed = (reuse_policy == "removed-branches")
+        for (branch, revno, exists) in self.repos.find_fileprop_branches(layout, from_revnum, to_revnum, project, check_removed=check_removed):
             assert isinstance(branch, str)
             assert isinstance(revno, int)
             # Look at their bzr:revision-id-vX
